compiler/tests/safety/success/riscv/align2.jazz
export
fn main(reg u32 pt) -> reg u32 {
  reg u32 tmp res i;

  res = 0;
  i = 0;
  while (i < 16) {
    tmp = [:u32 pt + 4*i];
    res += tmp;
    i += 1;
  }

  return res;
}
